	Alpha r36
- Added extra info on the auction being posted
- Reworked auction score
- Added option to disable background scanner

	Alpha r35
- Updated to Rift 1.8
- Redesigned Auction DB
- Scanning speed has been improved
- CPU usage has been reduced
- Added 'market price' pricing model
- Auction price are now compared to the 'market price' and color coded (cyan: very cheap, green: cheap, yellow: average, orange: expensive, red: very expensive)
- The Posting queue now displays the number of tasks queued
- Posting & Autoposting config are stored per character now
- The 'hide item' filter has been reworked and now allows also hiding item only for some characters (right click)
- The 'post' button now has a 0.5 cooldown to prevent accidental posting
- Temporarily disabled config tab
- Testing new way to display expire times

	Beta 0.2.2
- Reduced the auction database size so it doesn't get truncated
- Speeded up the background auction scanner

	Beta 0.2.1
- Added addon documentation by LunaEclipse

	Beta 0.2.0
- Added item filtering functionality to the items panel.
- Improved the posting fields and added an option to bind bid & buyout prices.
- Added basic and statistical pricing models (User defined, Vendor, Average, Standard deviation, Median and Trimmed mean).
- Added price matchers (Self matcher and Competition undercut matcher)
- Added auto posting (aka. batch posting)
- Added "undercut on right click" to the auction panel.
- Added posting queue management functionality.
- Added (optional) map icon and configuration tab.
- Fixed some bugs.

	Beta 0.1.4
- Fixed some critical bugs

	Beta 0.1.3
- Added German translation by chii
- Fixed error with some crafting materials
- Fixed error when the bags were empty

	Beta 0.1.2
- Added Russian translation by Aybolitus

	Beta 0.1.1
- Added localization support
- The addon window will be displayed above the native AH window if opened after it
- Bid & Buyout prices are no longer linked by default
	
	Beta 0.1.0